--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/mercure-bundle": "^0.2.5",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/security-bundle": "5.1.*",
