--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,45 @@
 version: '3'
 services:
-  database:
-    image: postgres:11-alpine
-    environment:
-      POSTGRES_USER: mqtt
-      POSTGRES_PASSWORD: mqtt
-      POSTGRESDB: mytt
-    ports: [5433:5432]
-  mercure:
-    container_name: mercureIOT
-    image: dunglas/mercure
-    environment:
-      - JWT_KEY=abc123abc
-      - DEMO=1
-      - ALLOW_ANONYMOUS=0
-      - PUBLISH_ALLOWED_ORIGINS=http://127.0.0.1:9090/hub
-      - DEBUG=1
-      - CORS_ALLOWED_ORIGINS=*
+#  database:
+#    image: postgres:11-alpine
+#    environment:
+#      POSTGRES_USER: mqtt
+#      POSTGRES_PASSWORD: mqtt
+#      POSTGRESDB: mytt
+#    ports: [5433:5432]
+#  mercure:
+#    container_name: mercureIOT
+#    image: dunglas/mercure
+#    environment:
+#      - JWT_KEY=abc123abc
+#      - DEMO=1
+#      - ALLOW_ANONYMOUS=0
+#      - PUBLISH_ALLOWED_ORIGINS=http://127.0.0.1:9090/hub
+#      - DEBUG=1
+#      - CORS_ALLOWED_ORIGINS=*
+#    ports:
+#      - "9090:80"
+#  mosquitto:
+#    image: eclipse-mosquitto
+#    ports:
+#      - ${MOSQUITTO_BROKER_PORT_ON_HOST}:1883
+
+  emqttd:
+    image: emqx/emqx
     ports:
-      - "9090:80"
-  mosquitto:
-    image: eclipse-mosquitto
+      - '1883:1883'
+      # admin / public
+      - '18083:18083'
+
+  emqttd2:
+    image: emqx/emqx
     ports:
-      - ${MOSQUITTO_BROKER_PORT_ON_HOST}:1883
+      - '1884:1883'
+      # admin / public
+      - '18084:18083'
+  emqttd3:
+    image: emqx/emqx
+    ports:
+      - '1885:1883'
+      # admin / public
+      - '18085:18083'
