--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 creds.txt
 mqtt.zip
 .env
+./integrations
 .idea
 README.md
 Samples.md
@@ -14,3 +15,7 @@ Samples.md
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
