alerts and messenger

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -10,5 +10,6 @@ framework:
             # sync: 'sync://'
 
         routing:
-            # Route your messages to the transports
-             'App\Message\SaveDeviceTelemetry': async
+            App\Message\CheckTriggers: async            # Route your messages to the transports
+            App\Message\SaveDeviceTelemetry: async
+            App\Message\MercurePublish: async
