--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ services:
       POSTGRES_PASSWORD: mqtt
       POSTGRESDB: mytt
     ports: [5433:5432]
-#  mercure:
-#    container_name: mercureIOT
-#    image: dunglas/mercure
-#    environment:
-#      - JWT_KEY=abc123abc
-#      - DEMO=1
-#      - ALLOW_ANONYMOUS=0
-#      - PUBLISH_ALLOWED_ORIGINS=http://127.0.0.1:9090/hub
-#      - DEBUG=1
-#      - CORS_ALLOWED_ORIGINS=*
-#    ports:
-#      - "9090:80"
+  mercure:
+    container_name: mercureIOT
+    image: dunglas/mercure
+    environment:
+      - JWT_KEY=!ChangeMe!
+      - DEMO=1
+      - ALLOW_ANONYMOUS=0
+      - PUBLISH_ALLOWED_ORIGINS=http://127.0.0.1:9090/hub
+      - DEBUG=1
+      - CORS_ALLOWED_ORIGINS=*
+    ports:
+      - "9090:80"
 #  mosquitto:
 #    image: eclipse-mosquitto
 #    ports:
